cambios maqueta, maqueta resultados comentada la v2,

--- a/indexold.html
+++ b/indexold.html
@@ -116,7 +116,7 @@
 
 
 	<!-- Contenedor resultados -->
-	<div id="contenedor-resultados" class="hidden bleft">
+	<div id="contenedor-resultados" class="bleft hidden">
 		<div class= "row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 				<div id="Respuestas"></div>
@@ -218,162 +218,6 @@
 			</div>
 		</div>
 		<!-- End contenedor mapa y gráficas -->
-
-		<!-- V2 INFORMACION -->
-
-		<!-- RECOMENDACIONES V2 -->
-		<!-- <div class="header-resultados">
-			<span class="regresar-cuestionario">Regresar al<br>cuestionario</span>
-			<h2>Recomendaciones</h2>
-		</div>
-		<div class ="row">
-			<div class= "col-md-10 offset-md-1">
-				<div class="container-recomendados">
-					<div class ="row recomendado">
-						<div class="col-md-4 green">
-							<span class="icon">
-								<img src="img/regaderab.png" class="">
-							</span>
-							<p><strong>3</strong> minutos<br>por baño</p>
-						</div>
-						<div class="col-md-8">
-							<p>Cada minuto en el baño consume 20 litros de agua. Asegurate de el flujo de agua mientras te enjabonas y tallas.</p>
-						</div>
-					</div>
-					<div class ="row recomendado">
-						<div class="col-md-4 yellow">
-							<span class="icon">
-								<img src="img/cocinab.png" class="">
-							</span>
-							<p><strong>10</strong> comidas<br>a la semana</p>
-						</div>
-						<div class="col-md-8">
-							<p>Cada minuto en el baño consume 20 litros de agua. Asegurate de el flujo de agua mientras te enjabonas y tallas.</p>
-						</div>
-					</div>
-					<div class ="row recomendado">
-						<div class="col-md-4 green">
-							<span class="icon">
-								<img src="img/ropab.png" class="">
-							</span>
-							<p><strong>2 lavados</strong><br>a la semana</p>
-						</div>
-						<div class="col-md-8">
-							<p>Cada minuto en el baño consume 20 litros de agua. Asegurate de el flujo de agua mientras te enjabonas y tallas.</p>
-						</div>
-					</div>
-					<div class ="row recomendado">
-						<div class="col-md-4 green">
-							<span class="icon">
-								<img src="img/auto.png" class="">
-							</span>
-							<p><strong>2 veces</strong><br>por semana</p>
-						</div>
-						<div class="col-md-8">
-							<p>Se asume que se utilizan cuando mucho 3 cubetas de agua grandes cada vez que se realizan alguna de estas actividades</p>
-						</div>
-					</div>
-					<div class="row recomendado">
-						<div class="col-md-4 green">
-							<span class="icon wc">
-								<img src="img/WCb.png" class="">
-							</span>
-							<p><strong>80% SI</strong><br>Ahorrador</p>
-						</div>
-						<div class="col-md-8">
-							<p>Desde hace años existen sanitarios con bajo consumo de agua -3.8 litros por descarga</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div> -->
-		<!-- END RECOMENDACIONES V2 -->
-		<!-- RESULTADOS V2 -->
-		<!-- <div class="row container-resultados">
-			<div class="col-md-10 offset-md-1 graficas">
-				<h2>Resultados</h2>
-				<div class="row">
-					<div class="col-md-7">
-						grafica pastel
-					</div>
-					<div class="col-md-5">
-						<h2>130mxn al mes</h2>
-						<p>Este es el porcentaje de tu pago qu cada actividad genera.</p>
-						<p class="text-red">Tu consumo y tu pago no empatan con tu zona. Asegurate de no tener fugas</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-10 offset-md-1 graficas">
-				<div class="row recomendado-all">
-					<div class="col-md-6">
-						<div class="green">
-							<span class="icon">
-								<img src="img/regaderab.png" class="">
-							</span>
-							<p>3 minutos<br>por baño</p>
-						</div>
-						<div class="green">
-							<span class="icon">
-								<img src="img/cocinab.png" class="">
-							</span>
-							<p><strong>10</strong> comidas<br>a la semana</p>
-						</div>
-						<div class="green">
-							<span class="icon">
-								<img src="img/ropab.png" class="">
-							</span>
-							<p><strong>2 lavados</strong><br>a la semana</p>
-						</div>
-						<div class="green">
-							<span class="icon">
-								<img src="img/auto.png" class="">
-							</span>
-							<p><strong>2 veces</strong><br>por semana</p>
-						</div class="green">
-						<div class="green">
-							<span class="icon wc">
-								<img src="img/WCb.png" class="">
-							</span>
-							<p><strong>80% SI</strong><br>Ahorrador</p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="green">
-							<span class="icon">
-								<img src="img/regaderab.png" class="">
-							</span>
-							<p>3 minutos<br>por baño</p>
-						</div>
-						<div class="green">
-							<span class="icon">
-								<img src="img/cocinab.png" class="">
-							</span>
-							<p><strong>10</strong> comidas<br>a la semana</p>
-						</div>
-						<div class="green">
-							<span class="icon">
-								<img src="img/ropab.png" class="">
-							</span>
-							<p><strong>2 lavados</strong><br>a la semana</p>
-						</div>
-						<div class="green">
-							<span class="icon">
-								<img src="img/auto.png" class="">
-							</span>
-							<p><strong>2 veces</strong><br>por semana</p>
-						</div>
-						<div class="green">
-							<span class="icon wc">
-								<img src="img/WCb.png" class="">
-							</span>
-							<p><strong>80% SI</strong><br>Ahorrador</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
-		<!-- END RESULTADOS V2 -->
 	</div>
 	<!-- End Contenedor resultados --> 
 
@@ -395,8 +239,6 @@
 	</footer>
 
 	<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-	<script> 
-		initmapas();
-	</script>
+
 </body>
 </html>
