--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				
 		</header>
 
-		<div id="contenedor-intro" class="">
+		<div id="contenedor-intro" class="contenedor-general">
 			<h1>Consumo de agua responsable</h1>
 
 			<p>El consumo de agua por persona es importante. Con esta encuesta podremos darte algunas recomendaciones para mejorar tu consumo.</p>
@@ -82,7 +82,7 @@
 		</div>
 
 		<!-- Contenedor preguntas -->
-		<div id="contenedor-preguntas" class="hidden">
+		<div id="contenedor-preguntas" class="hidden contenedor-general">
 
 			<!-- Controles de desplazamiento entre preguntas -->
 			<div class= "row">
@@ -116,7 +116,7 @@
 
 
 	<!-- Contenedor resultados -->
-	<div id="contenedor-resultados" class="hidden bleft">
+	<div id="contenedor-resultados" class="container hidden">
 		<div class= "row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 				<div id="Respuestas"></div>
@@ -378,20 +378,23 @@
 	<!-- End Contenedor resultados --> 
 
 	<footer>
-		<div class ="row w-75">
-			<div class= "col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				<img class= "imge" src="img/Logo-cdmx.png" >
+		<div class="container">
+			<div class ="row">
+				<div class= "col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<img class= "imge" src="img/Logo-cdmx.png" >
+				</div>
+				<div class= "col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<img class= "imge"  src="img/sacmex.png"  >
+				</div>
+				<div class= "col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<img class= "imge"  src="img/logolab.png">
+				</div>
+				<div class= "col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<img  class= "imge"  src="img/LogoCAD.png" >
+				 </div>
 			</div>
-			<div class= "col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				<img class= "imge"  src="img/sacmex.png"  >
-			</div>
-			<div class= "col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				<img class= "imge"  src="img/logolab.png">
-			</div>
-			<div class= "col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				<img  class= "imge"  src="img/LogoCAD.png" >
-			 </div>
 		</div>
+		
 	</footer>
 
 	<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
